# bookstack-mcp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  RFC-identity-book-restructure.md  SBOM.md  STRUCTURE.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  improvement.yml  refactor.yml
.github/workflows/: build-branches.yml  build-development.yml  build-pr.yml  build-release.yml  direct-push.yml  generate-artifacts.yml  pr-review.yml  promote-on-merge.yml  release.yml  security-scan.yml  verify-pr.yml
crates/bsmcp-common/: Cargo.toml
crates/bsmcp-common/src/: acl.rs  bookstack.rs  chunking.rs  config.rs  db.rs  index.rs  lib.rs  rate_limit.rs  settings.rs  types.rs  vector.rs
crates/bsmcp-db-postgres/: Cargo.toml
crates/bsmcp-db-postgres/src/: lib.rs
crates/bsmcp-db-sqlite/: Cargo.toml
crates/bsmcp-db-sqlite/src/: lib.rs
crates/bsmcp-embedder/: Cargo.toml
crates/bsmcp-embedder/src/: embed.rs  main.rs  pipeline.rs  rerank.rs
crates/bsmcp-server/: Cargo.toml
crates/bsmcp-server/src/: directory.rs  index_worker.rs  llm.rs  main.rs  mcp.rs  migrate.rs  oauth.rs  semantic.rs  session.rs  settings_ui.rs  setup_ui.rs  sse.rs  staging.rs  summary.rs
crates/bsmcp-server/src/briefing/: briefing.rs  envelope.rs  frontmatter.rs  mod.rs
crates/bsmcp-server/src/remember/: activity.rs  audit.rs  briefing.rs  collection.rs  config.rs  directory.rs  envelope.rs  events.rs  frontmatter.rs  identity.rs  journal.rs  journal_archive.rs  migrate.rs  mod.rs  naming.rs  provision.rs  reminders.rs  resolvers.rs  search.rs  section.rs  sessions.rs  singletons.rs  user.rs  user_provision.rs
crates/bsmcp-worker/: Cargo.toml
crates/bsmcp-worker/src/: lib.rs  main.rs
docker/: Dockerfile.embedder  Dockerfile.server  Dockerfile.worker  docker-compose.sqlite.yml  docker-compose.yml
scripts/: publish-pr-image.sh
src/: bookstack.rs  chunking.rs  db.rs  main.rs  mcp.rs  oauth.rs  semantic.rs  sse.rs  vector.rs  web_auth.rs
src/bookstack_mcp/: __main__.py  auth.py  bookstack.py  config.py  server.py  token_store.py  transport.py
