[workspace]
members = [
    "crates/bsmcp-common",
    "crates/bsmcp-db-sqlite",
    "crates/bsmcp-db-postgres",
    "crates/bsmcp-server",
    "crates/bsmcp-embedder",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
