[workspace]
members = [
    "crates/bsmcp-common",
    "crates/bsmcp-db-sqlite",
    "crates/bsmcp-db-postgres",
    "crates/bsmcp-server",
    "crates/bsmcp-embedder",
    "crates/bsmcp-worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
