[package]
name = "bsmcp-db-postgres"
edition.workspace = true
version.workspace = true

[dependencies]
bsmcp-common = { path = "../bsmcp-common" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
pgvector = { version = "0.4", features = ["sqlx"] }
tokio = { version = "1", features = ["rt", "sync"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
async-trait = "0.1"
serde_json = "1"
zeroize = "1"
