[package]
name = "bsmcp-embedder"
edition.workspace = true
version.workspace = true

[dependencies]
bsmcp-common = { path = "../bsmcp-common" }
bsmcp-db-sqlite = { path = "../bsmcp-db-sqlite" }
bsmcp-db-postgres = { path = "../bsmcp-db-postgres" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
fastembed = "5"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
